--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="SideViewPager">
-        <attr name="side_mode" format="boolean"/>
+        <attr name="right_margin" format="dimension"/>
         <attr name="page_margin" format="dimension"/>
+    </declare-styleable>
+    <declare-styleable name="SideLinearLayout">
+        <attr name="side_ll_ratio" format="float"/>
     </declare-styleable>
 </resources>
