--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/activity_main"
-              xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin"
-              tools:context="com.example.juexingzhe.sideviewpager.MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.example.juexingzhe.sideviewpager.MainActivity">
 
     <com.example.juexingzhe.sideviewpager.SideViewPager
         android:id="@+id/side_vp_0"
         android:layout_width="match_parent"
         android:layout_height="85dp"
-        app:page_margin="8dp"
         android:layout_marginBottom="15dp"/>
 
     <com.example.juexingzhe.sideviewpager.SideViewPager
         android:id="@+id/side_vp_1"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:page_margin="8dp"/>
+        android:layout_height="200dp"/>
 
-    <com.example.juexingzhe.sideviewpager.SideViewPager
-        android:id="@+id/side_vp_2"
+    <!--<com.example.juexingzhe.sideviewpager.SideViewPager-->
+    <!--android:id="@+id/side_vp_2"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="200dp"-->
+    <!--app:page_margin="8dp"/>-->
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:page_margin="8dp"/>
+        android:layout_height="wrap_content"/>
 </LinearLayout>
