--- a/app/src/main/res/layout/viewpager_item_equal.xml
+++ b/app/src/main/res/layout/viewpager_item_equal.xml
@@ -30,7 +30,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="@dimen/side_vp_item_margin"
         android:layout_weight="1"
         android:orientation="vertical">
 
