--- a/app/src/main/res/layout/viewpager_item_ratio.xml
+++ b/app/src/main/res/layout/viewpager_item_ratio.xml
@@ -27,7 +27,7 @@
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginLeft="8dp">
+        android:layout_marginLeft="@dimen/side_vp_item_margin">
         <ImageView
             android:id="@+id/vp_equal_image_1"
             android:layout_width="match_parent"
