--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,12 +16,13 @@
         android:id="@+id/side_vp_0"
         android:layout_width="match_parent"
         android:layout_height="85dp"
-        android:layout_marginBottom="15dp"/>
+        android:layout_marginBottom="5dp"/>
 
     <com.example.juexingzhe.sideviewpager.SideViewPager
         android:id="@+id/side_vp_1"
         android:layout_width="match_parent"
-        android:layout_height="200dp"/>
+        android:layout_height="200dp"
+        android:layout_marginBottom="5dp"/>
 
     <!--<com.example.juexingzhe.sideviewpager.SideViewPager-->
     <!--android:id="@+id/side_vp_2"-->
