--- a/app/src/main/res/layout/viewpager_item_one.xml
+++ b/app/src/main/res/layout/viewpager_item_one.xml
@@ -1,35 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/rtc_wheelview_shadow"
+    android:orientation="horizontal"
+    android:padding="@dimen/layout_padding">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_height="wrap_content">
+        android:gravity="center"
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/vp_main_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:text="主标题"
-            android:textSize="25dp"
-            android:layout_gravity="center_horizontal"/>
+            android:textSize="25dp" />
+
         <TextView
             android:id="@+id/vp_sub_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:text="副标题"
-            android:textSize="15dp"
-            android:layout_gravity="center_horizontal"/>
+            android:textSize="15dp" />
     </LinearLayout>
 
     <ImageView
         android:id="@+id/vp_image"
         android:layout_width="0dp"
-        android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:scaleType="fitXY"/>
+        android:layout_weight="1"
+        android:scaleType="fitXY" />
 
 </LinearLayout>
