--- a/app/src/main/res/layout/viewpager_item_ratio.xml
+++ b/app/src/main/res/layout/viewpager_item_ratio.xml
@@ -1,45 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="2"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_weight="2"
+        android:gravity="center"
+        android:background="@color/rtc_wheelview_shadow"
+        android:orientation="vertical"
+        android:padding="@dimen/layout_padding">
+
         <ImageView
             android:id="@+id/vp_equal_image_0"
             android:layout_width="match_parent"
             android:layout_height="120dp"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY" />
+
         <TextView
             android:id="@+id/vp_equal_title_0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
         <Button
             android:id="@+id/vp_equal_btn_0"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="1"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/side_vp_item_margin"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:background="@color/rtc_wheelview_shadow"
         android:orientation="vertical"
-        android:layout_marginLeft="@dimen/side_vp_item_margin">
+        android:padding="@dimen/layout_padding">
+
         <ImageView
             android:id="@+id/vp_equal_image_1"
             android:layout_width="match_parent"
             android:layout_height="120dp"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY" />
+
         <TextView
             android:id="@+id/vp_equal_title_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
         <Button
             android:id="@+id/vp_equal_btn_1"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
