--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_vertical_margin">8dp</dimen>
     <dimen name = "side_vp_item_margin">8dp</dimen>
     <dimen name="side_vp_page_margin">8dp</dimen>
+    <dimen name="layout_padding">10dp</dimen>
+    <dimen name="button_margin">5dp</dimen>
 </resources>
